# AN

./: .dockerignore  .env.dev  AAC.md  Dockerfile  README.md  SCRAPING.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run
blog/: views.py
blog/templates/blog/: all-isbns.html  annas-archive-containers.html  annas-update-open-source-elasticsearch-covers.html  backed-up-the-worlds-largest-comics-shadow-lib.html  blog-3x-new-books.html  blog-how-to-become-a-pirate-archivist.html  blog-introducing.html  blog-isbndb-dump-how-many-books-are-preserved-forever.html  critical-window-chinese.html  critical-window.html  duxiu-exclusive-chinese.html  duxiu-exclusive.html  help-seed-zlibrary-on-ipfs.html  how-to-run-a-shadow-library.html  index.html  it-how-to-run-a-shadow-library.html  putting-5,998,794-books-on-ipfs.html  worldcat-scrape.html
isbn_images/: README.md  calculate_percentage_md5.py  make_isbn_images.py
